--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -1,56 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<style>
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: #132226;
+}
+
+.box{
+    width: 300px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #040C0E;
+    text-align: center;
+}
+
+.box h1{
+    color: #BE9063;
+    text-transform: uppercase;
+}
+
+a{
+    color: white;
+    font-size: 14px;
+    padding: 10px;
+}
+
+a:hover{
+    color: #BE9063;
+}
+
+.box input[type = "text"],.box input[type = "password"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #525B56;
+    padding: 14px 10px;
+    width: 200px;
+    color: white;
+    outline: none;
+    border-radius: 10px ;
+    transition: 0.25s;
+}
+
+.box input[type = "text"]:focus,.box input[type = "password"]:focus{
+    width: 280px;
+    border-color: #BE9063;
+
+}
+
+.box input[type = "submit"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #BE9063;
+    padding: 14px 40px; 
+    color: white;
+    outline: none;
+    border-radius: 10px ;
+    transition: 0.30;
+    cursor: pointer;
+}
+
+.box input[type = "submit"]:hover{
+    background: #BE9063;
+}
+</style>  
 
 <body>
-    {{>nav}}
-    <div class="container">
-
-        <form action="" method="POST">
-            <div class="form-group">
-                <label for="fname">First Name</label>
-                <input type="text" name="fname" id="fname" class="form-control" placeholder="Enter Your First Name">
-
-            </div>
-            <div class="form-group">
-                <label for="lname">Last Name</label>
-                <input type="text" name="lname" id="lname" class="form-control" placeholder="Enter Your Last Name">
-            </div>
-
-            <div class="form-group">
-                <label for="phoneno">Phone No.</label>
-                <input type="text" name="phoneno" id="phoneno" placeholder="Enter Your Phone No." class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" name="email" id="email" aria-describedby="emailidtext"
-                    placeholder="Enter your email" required>
-                <small id="emailidtext" class="form-text text-muted">abc123@example.com</small>
-            </div>
-
-            <div class="form-group">
-                <label for="pass">Password</label>
-                <input type="password" class="form-control" name="pass" id="pass" placeholder="Enter Password" required>
-            </div>
-
-            <div class="form-group">
-                <label for="pass2">Confirm Password</label>
-                <input type="password" class="form-control" name="pass2" id="pass2"
-                    placeholder="Enter your password again" r required>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-
-        </form>
-
-    </div>
+    <form class="box" action="index.html" method="POST">
+        <h1>Sign up</h1>   
+        <input type="text" placeholder="Username">
+        <input type="text" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="confirm password" required>
+        <input type="submit" value="Create Account" placeholder="Sign Up">
+        <a href="#">Already have one?</a>
+    </form>
 
     <script src=" https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
